title alignment fixed

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -103,7 +103,7 @@
   font-weight: 500;
   font-size: 36px;
   margin-bottom: -9%;
-  line-height: 115%;
+  line-height: 120%;
 }
 
 .whiteTextLarge {
